# Student-Management-System

./: README.md  add_new_score.cpp  add_new_score.h  add_new_score.ui  adminview.h  contactcreator.h  contactdelete.cpp  contactdelete.h  contactedit.cpp  contactedit.ui  delete_score.cpp  delete_score.ui  edit_score.ui  find_pswd.h  mainwindow.cpp  studentWizard.ui  studentcreator.cpp  studentedit.cpp  studentedit.h  studentedit.ui  studentview.cpp
scr/: CMakeLists.txt  adminview.cpp  adminview.ui  contactcreator.cpp  contactcreator.ui  contactdelete.ui  contactedit.h  contactedit_search.cpp  contactedit_search.h  contactedit_search.ui  database.cpp  database.h  delete_score.h  dialog.ui  edit_score.cpp  edit_score.h  find_pswd.cpp  find_pswd.ui  globals.h  help.ui  images.qrc  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.ui  studentcreator.h  studentcreator.ui  studentview.h  studentview.ui
